--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^2.1.3",
+    "axios": "^1.6.8",
+    "bulma": "^1.0.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "json2csv": "^6.0.0-alpha.2",
+    "papaparse": "^5.4.1",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
