--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^1.6.8",
     "bulma": "^1.0.0",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.10.1",
     "json2csv": "^6.0.0-alpha.2",
     "papaparse": "^5.4.1",
     "vue": "^3.2.13",
