--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "axios": "^1.6.8",
     "bulma": "^1.0.0",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.1",
     "json2csv": "^6.0.0-alpha.2",
     "papaparse": "^5.4.1",
+    "pdf-lib": "^1.17.1",
     "uuid": "^9.0.1",
     "vue": "^3.2.13",
+    "vue-pdf": "^4.3.0",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
@@ -27,7 +30,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "file-loader": "^6.2.0"
   },
   "eslintConfig": {
     "root": true,
